app/assets/stylesheets/dashboard.scss
/* ... */
.modal {
  text-align: left;
  min-height: 100%;
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: $modal-z-index;
  height: auto;
  display: block;
  width: 100%;
  overflow-y: scroll;
  height: 100%;
  background-color: #FBFBFB;
  &.ng-enter {
    @include animation(slideUpModal 0.4s ease-out);
  }

  &.ng-leave {
    @include animation(slideDownModal 0.4s ease-in);
  }

  .error {
    .fa-info-circle { margin-right: 4px; }
    color: #AD0505;
  }
}

.subview {
  position: absolute;
  top: 0px;
  left: 0px;
  min-height: 100%;
  height: auto;
  width: 100%;
  display: block;
  background-color: white;

  &.ng-enter {
    @include animation(slideInModal 0.35s ease-out);
  }
  &.ng-leave {
    @include backface-visibility(visible);
    @include animation(slideOut 0.35s ease-in);
  }
}

@include keyframes(fadeOut) {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@include keyframes(fadeIn) {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@include keyframes(slideOut) {
  0% {
    @include transform(translateX(0%));
  }
  100% {
    @include transform(translateX(100%));
  }
}

@include keyframes(slideInModal) {
  0% {
    @include transform(translateX(100%));
  }
  100% {
    @include transform(translateX(0%));
  }
}
@include keyframes(slideUpModal) {
  0% {
    @include transform(translateY(100%));
  }
  100% {
    @include transform(translateY(0px));
  }
}

@include keyframes(slideDownModal) {
  0% {
    @include transform(translateY(0%));
  }
  100% {
    @include transform(translateY(100%));
  }
}

.header-container {
  margin: 0 auto;
  text-align: left;
  background-color: $header-background;
  position: fixed;
  z-index: $modal-z-index;
  width: 100%;
  min-height: 100% !important;
  height: auto;
  display: block;
  overflow-y: scroll;
  header {
    background-color: white;
    color: $default-color;
    font-size: 14pt;
    min-height: 100% !important;
    height: auto;
    display: block;
    width: $header-width;
    position: absolute;

    z-index: $modal-z-index;
    .brand {
      @include retina-image("dashboard/header/top", $header-width 187px);
      height: 187px;
      width: $header-width;

      .back-button {
        padding: 15px;
        font-size: 18pt;
      }
    }

    li {
      margin: 34px 0px;
      .fa {
        width: 20px;
        display: inline-block;
        vertical-align: middle;
      }
      span {
        margin: 0px auto;
        margin-left: 28px;
        text-overflow: ellipsis;
        white-space: nowrap;

        display: inline-block;

        max-width: 200px;
        overflow: hidden;
        vertical-align: middle;
      }
      &:hover, &.active {
        color: $selected-color;
        cursor: pointer;
      }
    }

    nav, .orders {
      padding: 0px 17px;
      list-style: none;
    }

    .pending-orders {

      .fading-circle-spinner {
        margin: 25px auto;
      }

      h5 {
        padding: 3px 17px;
        background-color: #B9AFAD;
        margin: 0 auto;
        color: white;
        font-weight: normal;
        text-align: left;
      }

    }

  }

  &.ng-hide {
    display: none;
  }

  &.ng-hide-remove {
    @include animation(fadeInHeader 0.2s ease-in);
    background-color: rgba(0,0,0,.0);
    header {
      @include animation(slideInHeader 0.2s ease-in);
      @include transform(translateX(0px));
    }
  }

  &.ng-hide-add {
    @include animation(fadeOutBackground 0.2s ease-out);
    display: block !important;
    header {
      @include animation(slideOutHeader 0.2s ease-out);
    }
  }


}

@include keyframes(slideInHeader) {
  0% {
    @include transform(translateX(-$header-width));
  }
  100% {
    @include transform(translateX(0px));
  }
}

@include keyframes(fadeInHeader) {
  0% {
    background-color: rgba(0,0,0,.0);
  }
  100% {
    background-color: $header-background;
  }
}

@include keyframes(slideOutHeader) {
  0% {
    @include transform(translateX(0px));
  }

  100% {
    @include transform(translateX(-$header-width));
  }
}

@include keyframes(fadeOutBackground) {
  100% {
    background-color: rgba(0,0,0,0.0);
    display: none;
  }
}


.nav-bar {
  margin: 0 auto;
  background-color: $brand-green;
  padding: 12px 20px;
  font-size: 20pt;
  text-align: center;
  color: white;

  .left-button {
    float: left;
  }
  .title {
    font-weight: $light-font;
    .fa-caret-down { margin-left: 20px; }
  }
  .right-button {
    float: right;
  }

  button {
    background: transparent;
    border: none;
  }

  .left-button, .right-button {
    &:hover {
      cursor: pointer;
      color: $default-color;
    }
  }

}
/* ... */

